@@ -5,6 +5,7 @@
  * Updated Russian translations from I Nedoboy
  * New Catalan translations from Oriol Garrote
  * Remove eye icon on Android >3.0 devices
+ * Fix logic for when to display the words Show Password vs. Hide Password
 
 KeePassDroid (1.9.18.2)
  * Updated Dutch translations from Erik Jan Meijer
